2006-08-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: apply filter to calcuated data before
	deleting a person from the list

2006-08-17  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix #0000349: NarrativeWebsite sorting

2006-08-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: rebuild after compare and
	merge (bug #350)

2006-08-17  Alex Roitman  <shura@gramps-project.org>
	* src/StartupDialog.py (__init__): Pass its class to Assistant.
	* src/Exporter.py (__init__): Pass its class to Assistant.
	* src/Assistant.py (__init__): Accept parent class (to make
	assistants unique *only* within their type);
	(prepare_text_page): Use markup in the text.
	* NEWS: Update.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/plugins/MediaManager.py: Add new plugin (still in progress).

2006-08-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: rebuild display after a merge of
	two people (bug #348)

2006-08-16  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py (Disconnected): Add verification rule;
	(Verify.run_tool): Use the new rule.
	* src/Filters/Rules/Person/_Disconnected.py (apply): Fix rule.
	* src/Filters/Rules/Person/__init__.py (editor_rule_list): Add
	Disconnected rule to the Custom Filter rules.

2006-08-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: support for AGE, CAUSE, and AGENCY
	* src/GrampsDb/_ReadGedcom.py: support for AGE, CAUSE, and AGENCY
	* src/GrampsDb/_GedTokens.py: support for AGE and AGENCY

2006-08-15  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_EditFilter.py (on_edit_clicked,on_add_clicked):
	Pass filter name to the rule editor.
	* src/FilterEditor/_EditRule.py (EditRule.__init__): Pass filter
	name to MyFilters.
	(MyFilters.__init__): Exclude filter being edited from the
	matching filter.