@@ -1,3 +1,8 @@
+2006-08-17  Alex Roitman  <shura@gramps-project.org>
+	* src/NameDisplay.py: Correct constants to accomodate Name change.
+	* src/GrampsDb/_GrampsBSDDB.py: Upgrade the names.
+	* src/RelLib/_Name.py: Remove sname attribute.
+
 2006-08-17  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_PersonView.py: apply filter to calcuated data before
 	deleting a person from the list
